force-app/main/default/objects/Part__c/Part__c.object-meta.xml
<CustomObject>
    <description>Reference catalog of vehicle parts used in warranty claims, including category, part number, MSRP, and eligibility flags.</description>
    <label>Part</label>
    <nameField>
        <label>Part Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>