force-app/main/default/objects/Part__c/fields/IsWarrantyEligible__c.field-meta.xml
<CustomField>
    <fullName>IsWarrantyEligible__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if the part is generally eligible under warranty rules.</description>
    <label>Is Warranty Eligible</label>
    <type>Checkbox</type>
</CustomField>