force-app/main/default/objects/Part__c/fields/MSRP__c.field-meta.xml
<CustomField>
    <fullName>MSRP__c</fullName>
    <description>Manufacturer&apos;s suggested retail price.</description>
    <label>MSRP</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>