force-app/main/default/objects/Part__c/fields/PartNumber__c.field-meta.xml
<CustomField>
    <fullName>PartNumber__c</fullName>
    <description>Canonical part number identifier.</description>
    <inlineHelpText>Manufacturer or internal part number.</inlineHelpText>
    <label>Part Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>